fix: remove negative wrapper margin on mobile

--- a/web/scss/_application.scss
+++ b/web/scss/_application.scss
@@ -1,4 +1,5 @@
 @import "_variables";
+@import "_media-queries";
 
 .application {
   display: flex;
@@ -31,7 +32,7 @@
     flex: 1;
     display: flex;
     justify-content: center;
-    margin-top: -3.25rem;
+    padding-bottom: 1.5rem;
   }
 
   .columns {
